--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header class="header">
         <div class=" container header-container">
           <div class="logo">
-            <a href="index.html"><img src="" alt="Логотип Тенниса"></a>
+            <a href="index.html"><img src="img/svg/logo.svg" alt="Логотип Тенниса"></a>
           </div>
           <nav class="navigation">
             <ul class="navigation-list">
@@ -28,8 +28,8 @@
             </ul>
           </nav>
           <div class="social">
-            <a href="#"><img src="" alt="YouTube"></a>
-            <a href="#"><img src="" alt="VK"></a>
+            <a href="#"><img src="img/svg/icon-youtube-white.svg" alt="YouTube"></a>
+            <a href="#"><img src="img/svg/icon-vk-white.svg" alt="VK"></a>
           </div>
         </div>
         <div class="header-line"></div>
@@ -38,29 +38,29 @@
       <div class="container">
         <h1 class="hero-title"> Петербургский<br> теннисный клуб<br> имени М.А. Пасечникова </h1>
         <div class="video">
-          <img src="" alt="Проигрыватель" class="player">
+          <img src="img/svg/play-button.svg" alt="Проигрыватель" class="player">
           <p> Посмотрите видео<br> о нашем клубе </p>
         </div>
         <div class="services" id="services">
           <div class="service-item">
             <p class="service-category">Услуги</p>
             <p class="service-title">Аренда корта</p>
-            <img src="" alt="перейти" class="go">
+            <img src="img/svg/icon-arrow.svg" alt="перейти" class="go">
           </div>
           <div class="service-item">
             <p class="service-category">Услуги</p>
             <p class="service-title">Детский теннис</p>
-            <img src="" alt="Перейти" class="go">
+            <img src="img/svg/icon-arrow.svg" alt="Перейти" class="go">
           </div>
           <div class="service-item">
             <p class="service-category">Услуги</p>
             <p class="service-title">Сборы команд</p>
-            <img src="" alt="Перейти" class="go">
+            <img src="img/svg/icon-arrow.svg" alt="Перейти" class="go">
           </div>
           <div class="service-item">
             <p class="service-category">Турниры</p>
             <p class="service-title">Расписание</p>
-            <img src="" alt="Перейти" class="go">
+            <img src="img/svg/icon-arrow.svg" alt="Перейти" class="go">
           </div>
         </div>
       </div>
