--- a/news.html
+++ b/news.html
@@ -1,106 +1,138 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Tennis - Новости</title>
-    <link rel="stylesheet" href="style.css">
-  </head> 
-  
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
   <body>
     <main>
       <section class="hero-news">
         <header class="header">
-  <div class=" container header-container">
-    <div class="logo">
-      <a href="index.html"><img src="" alt="Логотип Тенниса"></a>
-    </div>
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="club.html">О клубе</a></li>
-        <li><a href="index.html#services">Турниры</a></li>
-        <li><a href="index.html#cafe-section">Услуги</a></li>
-        <li><a href="index.html#services">Детский теннис</a></li>
-        <li><a href="news.html">Галерея</a></li>
-        <li><a href="index.html#cafe-section">Цены</a></li>
-        <li><a href="#footer">Контакты</a></li>
-      </ul>
-    </nav>
-    <div class="social">
-      <a href="#"><img src="" alt="YouTube"></a>
-      <a href="#"><img src="" alt="VK"></a>
-    </div>
-  </div>
-  <div class="header-line"></div>
-</header>
+          <div class="container header-container">
+            <div class="logo">
+              <a href="index.html"
+                ><img src="img/svg/logo.svg" alt="Логотип Тенниса"
+              /></a>
+            </div>
+            <nav class="navigation">
+              <ul class="navigation-list">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="club.html">О клубе</a></li>
+                <li><a href="index.html#services">Турниры</a></li>
+                <li><a href="index.html#cafe-section">Услуги</a></li>
+                <li><a href="index.html#services">Детский теннис</a></li>
+                <li><a href="news.html">Галерея</a></li>
+                <li><a href="index.html#cafe-section">Цены</a></li>
+                <li><a href="#footer">Контакты</a></li>
+              </ul>
+            </nav>
+            <div class="social">
+              <a href="#"
+                ><img src="img/svg/icon-youtube-white.svg" alt="YouTube"
+              /></a>
+              <a href="#"><img src="img/svg/icon-vk-white.svg" alt="VK" /></a>
+            </div>
+          </div>
+          <div class="header-line"></div>
+        </header>
 
-<section>
-  <h1>Новости</h1>
-</section>
-</section>
+        <section>
+          <h1>Новости</h1>
+        </section>
+      </section>
 
-<section class="news">
-  <div class="container">
-    <div class="news-container"> 
-      <div class="news-card">
-        <img src="" alt="1" class="news-photo">
-        <time class="news-date">22 июля 2022 года</time>
-        <h4>Consequat consequat augue quis<br> urna arcu scelerisque ac montes,<br> sed. Arcu orci quam lectus orci in.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-      <div class="news-card">
-        <img src="" alt="2" class="news-photo">
-        <time class="news-date">4 апреля 2022 года</time>
-        <h4>Suspendisse orci fermentum<br> congue enim risus velit neque. Mi.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-      <div class="news-card">
-        <img src="" alt="3" class="news-photo">
-        <time class="news-date">30 ноября 2021 года</time>
-        <h4>Interdum proin amet nibh tortor<br> sed vulputate mattis. Ridiculus<br> porta ipsum neque ut vel vitae et.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-      <div class="news-card">
-        <img src="" alt="4" class="news-photo">
-        <time class="news-date">22 июля 2022 года</time>
-        <h4>Nisl tempor vel tempor adipiscing<br> id nulla magnis ut ultrices.<br> Malesuada metus et in blandit.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-      <div class="news-card">
-        <img src="" alt="5" class="news-photo">
-        <time class="news-date">22 июля 2022 года</time>
-        <h4>Libero fermentum pretium sed orci<br> nunc, sagittis mollis lacus dolor.<br> Tincidunt et enim sed ac faucibus.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-      <div class="news-card">
-        <img src="" alt="6" class="news-photo">
-        <time class="news-date">22 июля 2022 года</time>
-        <h4>Netus hendrerit tortor laoreet duis<br> proin nulla faucibus ultricies. Et<br> urna fringilla nunc, metus nec.</h4>
-        <a href="#" class="detail">Подробнее</a>
-      </div>
-    </div>
-  </div>
-</section>
-</main>
+      <section class="news">
+        <div class="container">
+          <div class="news-container">
+            <div class="news-card">
+              <img src="img/news-1.webp" alt="1" class="news-photo" />
+              <time class="news-date">22 июля 2022 года</time>
+              <h4>
+                Consequat consequat augue quis<br />
+                urna arcu scelerisque ac montes,<br />
+                sed. Arcu orci quam lectus orci in.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+            <div class="news-card">
+              <img src="img/news-2.webp" alt="2" class="news-photo" />
+              <time class="news-date">4 апреля 2022 года</time>
+              <h4>
+                Suspendisse orci fermentum<br />
+                congue enim risus velit neque. Mi.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+            <div class="news-card">
+              <img src="img/news-3.webp" alt="3" class="news-photo" />
+              <time class="news-date">30 ноября 2021 года</time>
+              <h4>
+                Interdum proin amet nibh tortor<br />
+                sed vulputate mattis. Ridiculus<br />
+                porta ipsum neque ut vel vitae et.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+            <div class="news-card">
+              <img src="img/news-4.webp" alt="4" class="news-photo" />
+              <time class="news-date">22 июля 2022 года</time>
+              <h4>
+                Nisl tempor vel tempor adipiscing<br />
+                id nulla magnis ut ultrices.<br />
+                Malesuada metus et in blandit.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+            <div class="news-card">
+              <img src="img/news-5.webp" alt="5" class="news-photo" />
+              <time class="news-date">22 июля 2022 года</time>
+              <h4>
+                Libero fermentum pretium sed orci<br />
+                nunc, sagittis mollis lacus dolor.<br />
+                Tincidunt et enim sed ac faucibus.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+            <div class="news-card">
+              <img src="img/news-6.webp" alt="6" class="news-photo" />
+              <time class="news-date">22 июля 2022 года</time>
+              <h4>
+                Netus hendrerit tortor laoreet duis<br />
+                proin nulla faucibus ultricies. Et<br />
+                urna fringilla nunc, metus nec.
+              </h4>
+              <a href="#" class="detail">Подробнее</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-<footer class="footer" id="footer">
-  <div class="footer-container">
-    <p class="copyright">2022 © Все права защищены.</p>
-    <ul class="footer-menu">
-      <li><a href="index.html">Главная</a></li>
-      <li><a href="club.html">О клубе</a></li>
-      <li><a href="index.html#services">Турниры</a></li>
-      <li><a href="index.html#cafe-section">Услуги</a></li>
-      <li><a href="index.html#services">Детский теннис</a></li>
-      <li><a href="news.html">Галерея</a></li>
-      <li><a href="index.html#cafe-section">Цены</a></li>
-      <li><a href="index.html#footer">Контакты</a></li>
-    </ul>
-    <div class="footer-socials">
-      <a href="#"><img src="" alt="YouTube"></a>
-      <a href="#"><img src="" alt="VK"></a>
-      <a href="#"><img src="" alt="Telegram"></a>
-    </div>
-  </div>
-</footer>
-</body>
+    <footer class="footer" id="footer">
+      <div class="footer-container">
+        <p class="copyright">2022 © Все права защищены.</p>
+        <ul class="footer-menu">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="club.html">О клубе</a></li>
+          <li><a href="index.html#services">Турниры</a></li>
+          <li><a href="index.html#cafe-section">Услуги</a></li>
+          <li><a href="index.html#services">Детский теннис</a></li>
+          <li><a href="news.html">Галерея</a></li>
+          <li><a href="index.html#cafe-section">Цены</a></li>
+          <li><a href="index.html#footer">Контакты</a></li>
+        </ul>
+        <div class="footer-socials">
+          <a href="#"
+            ><img src="img/svg/icon-youtube-purple.svg" alt="YouTube"
+          /></a>
+          <a href="#"><img src="img/svg/icon-vk-purple.svg" alt="VK" /></a>
+          <a href="#"
+            ><img src="img/svg/icon-tg-purple.svg" alt="Telegram"
+          /></a>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
