--- a/club.html
+++ b/club.html
@@ -10,32 +10,56 @@
     <main>
       <section class="hero-club">
         <header class="header">
-          <div class="container header-container">
-            <div class="logo">
+          <div class="container header__container">
+            <div class="header__logo">
               <a href="index.html"
                 ><img src="img/svg/logo.svg" alt="Логотип Тенниса"
               /></a>
             </div>
             <nav class="navigation">
-              <ul class="navigation-list">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="club.html">О клубе</a></li>
-                <li><a href="index.html#services">Турниры</a></li>
-                <li><a href="index.html#cafe-section">Услуги</a></li>
-                <li><a href="index.html#services">Детский теннис</a></li>
-                <li><a href="news.html">Галерея</a></li>
-                <li><a href="index.html#cafe-section">Цены</a></li>
-                <li><a href="#footer">Контакты</a></li>
+              <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a href="index.html" class="navigation__link">Главная</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="club.html" class="navigation__link">О клубе</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#services" class="navigation__link">Турниры</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#cafe-section" class="navigation__link">Услуги</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#services" class="navigation__link"
+                    >Детский теннис</a
+                  >
+                </li>
+                <li class="navigation__item">
+                  <a href="news.html" class="navigation__link">Галерея</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#cafe-section" class="navigation__link">Цены</a>
+                </li>
+                <li class="navigation__item">
+                  <a href="#footer" class="navigation__link">Контакты</a>
+                </li>
               </ul>
             </nav>
-            <div class="social">
-              <a href="#"
-                ><img src="img/svg/icon-youtube-white.svg" alt="YouTube"
+            <div class="header__social">
+              <a href="#" class="header__social-link">
+                <img
+                  src="img/svg/icon-youtube-white.svg"
+                  alt="YouTube"
+                  class="header__social-icon"
               /></a>
-              <a href="#"><img src="img/svg/icon-vk-white.svg" alt="VK" /></a>
-            </div>
-          </div>
-          <div class="header-line"></div>
+              <a href="#" class="header__social-link">
+                <img
+                  src="img/svg/icon-vk-white.svg"
+                  alt="VK"
+                  class="header__social-icon"
+              /></a>
+          <div class="header__line"></div>
         </header>
 
         <section>
@@ -387,25 +411,52 @@
     </main>
 
     <footer class="footer" id="footer">
-      <div class="footer-container">
-        <p class="copyright">2022 © Все права защищены.</p>
-        <ul class="footer-menu">
-          <li><a href="index.html">Главная</a></li>
-          <li><a href="club.html">О клубе</a></li>
-          <li><a href="index.html#services">Турниры</a></li>
-          <li><a href="index.html#cafe-section">Услуги</a></li>
-          <li><a href="index.html#services">Детский теннис</a></li>
-          <li><a href="news.html">Галерея</a></li>
-          <li><a href="index.html#cafe-section">Цены</a></li>
-          <li><a href="#footer">Контакты</a></li>
+      <div class="footer__container">
+        <p class="footer__copyright">2022 © Все права защищены.</p>
+        <ul class="footer__menu">
+          <li class="footer__item">
+            <a href="index.html" class="footer__link">Главная</a>
+          </li>
+          <li class="footer__item">
+            <a href="club.html" class="footer__link">О клубе</a>
+          </li>
+          <li class="footer__item">
+            <a href="#services" class="footer__link">Турниры</a>
+          </li>
+          <li class="footer__item">
+            <a href="#cafe-section" class="footer__link">Услуги</a>
+          </li>
+          <li class="footer__item">
+            <a href="#services" class="footer__link">Детский теннис</a>
+          </li>
+          <li class="footer__item">
+            <a href="news.html" class="footer__link">Галерея</a>
+          </li>
+          <li class="footer__item">
+            <a href="#cafe-section" class="footer__link">Цены</a>
+          </li>
+          <li class="footer__item">
+            <a href="#footer" class="footer__link">Контакты</a>
+          </li>
         </ul>
-        <div class="footer-socials">
-          <a href="#"
-            ><img src="img/svg/icon-youtube-purple.svg" alt="YouTube"
+        <div class="footer__socials">
+          <a href="#" class="footer__social-link"
+            ><img
+              src="img/svg/icon-youtube-purple.svg"
+              class="footer__social-icon"
+              alt="YouTube"
           /></a>
-          <a href="#"><img src="img/svg/icon-vk-purple.svg" alt="VK" /></a>
-          <a href="#"
-            ><img src="img/svg/icon-tg-purple.svg" alt="Telegram"
+          <a href="#" class="footer__social-link"
+            ><img
+              src="img/svg/icon-vk-purple.svg"
+              class="footer__social-icon"
+              alt="VK"
+          /></a>
+          <a href="#" class="footer__social-link"
+            ><img
+              src="img/svg/icon-tg-purple.svg"
+              class="footer__social-icon"
+              alt="Telegram"
           /></a>
         </div>
       </div>
